Fix library index carousel scroll buttons not working on small screens; consolidate categories in frontend and backend; restyle 'loading more results' indicator; fix some issues with navbar item widths.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1275,7 +1275,7 @@ md-card.oppia-dashboard-exp-tile {
   }
   .oppia-save-draft-button {
     padding-bottom: 6px;
-    width: 95px;
+    width: 125px;
   }
 }
 
